# Marklite

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
scripts/: build-windows-installer.ps1  patch-nsis-installer.ps1
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  markdown_commands.rs  mod.rs  recent_commands.rs  settings_commands.rs
src-tauri/src/models/: app_error.rs  document.rs  mod.rs  settings.rs
src-tauri/src/services/: file_service.rs  markdown_service.rs  mod.rs  recent_files_service.rs  settings_service.rs
src-tauri/src/utils/: mod.rs  path_utils.rs  security.rs
src/app/: App.svelte
src/app/stores/: documentStore.ts  settingsStore.ts  uiStore.ts
src/components/dialogs/: AboutDialog.svelte  SettingsDialog.svelte
src/components/editor/: MarkdownEditor.svelte  PreviewPane.svelte
src/components/layout/: CommandPalette.svelte  Sidebar.svelte  StatusBar.svelte  TitleBar.svelte
src/lib/: commands.ts  markdownToolbar.ts  shortcuts.ts  tauriApi.ts
src/styles/: globals.css  markdown-preview.css  themes.css
